fix: fixed overflowing stuff - midterms fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,19 +11,6 @@
   text-rendering: optimizeLegibility;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
